# twitch_streams_GUI

./: .gitignore  README.md  layout.kv  layout2.kv  main.py  pyproject.old.toml  pyproject.toml  requirements.txt  setup.py  streamsvlc.py
app/: app.kv  boxmain.kv  boxmain.py  config.py  credencial.example.py  main.py  tui.py
app/components/BoxStream/: box_stream.kv  box_stream.py
app/components/DialogSelectResolution/: dialog_sselect_resolution.kv  dialog_sselect_resolution.py
app/components/PopUpAuth/: pop_up_auth.kv  pop_up_auth.py
app/components/PopUpProgress/: pop_up_progress.kv  pop_up_progress.py
app/fakes/: list_streams.py
app/tests/: test_twitchstreamsgui.py
app/tests/fakes/: list_streams.py
app/utils/: parser_streams.py  serializer_list_streams.py  twitch_api.py
src/: layout.kv  main.py  streamsvlc.py
tests/: test_boxmain.py  test_components.py  test_config.py  test_coverage_gap_boxmain.py  test_coverage_gap_popupprogress.py  test_coverage_gap_server.py  test_coverage_gap_tui.py  test_parser.py  test_server.py  test_tui.py  test_twitch_api.py  test_twitchstreamsgui.py
tests/fakes/: list_streams.py
