[project]
name = "twitch-streams-gui"
version = "0.1.0"
description = "App desktop desenvolvido em python e com a interface feita em KivyMD"
authors = ["Dayham Soares <dayhamsoares@gmail.com>"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kivy[base]>=2.3.0",
    "kivymd",
    "psutil>=6.1.0",
    "python-dotenv>=1.0.1",
    "streamlink>=8.0.0",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "textual",
]

[tool.uv.sources]
kivymd = { git = "https://github.com/kivymd/KivyMD.git" }
