[project]
name = "twitch-streams-gui"
version = "0.1.0"
description = "App desktop desenvolvido em python e com a interface feita em KivyMD"
authors = ["Dayham Soares <dayhamsoares@gmail.com>"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kivy[base]>=2.3.0",
    "kivymd",
    "psutil>=6.1.0",
    "python-dotenv>=1.0.1",
    "streamlink>=8.0.0",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "textual",
]

[tool.uv.sources]
kivymd = { git = "https://github.com/kivymd/KivyMD.git" }

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning:kivy.core.image",
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "app/tui.py"]

[tool.coverage.report]
show_missing = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "httpx>=0.28.1",
    "asgi-lifespan>=2.1.0",
    "ruff>=0.15.12",
    "respx>=0.23.1",
]
